--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kr.hs.emirim.ohyoonseo.project_lbm">
+    package="kr.hs.emirim.ohyoonseo.project_lbm" >
 
     <application
         android:allowBackup="true"
@@ -8,9 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Project_LBM">
-        <activity android:name=".SubActivity2"></activity>
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Project_LBM" >
+        <activity android:name=".activity_home" >
+        </activity>
+        <activity android:name=".SubActivity2" />
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
