--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kr.hs.emirim.ohyoonseo.project_lbm" >
+    package="kr.hs.emirim.ohyoonseo.project_lbm">
 
     <application
         android:allowBackup="true"
@@ -8,24 +8,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Project_LBM" >
-        <activity android:name=".activity_home" >
-        </activity>
-        <activity android:name=".SubActivity2" >
+        android:theme="@style/Theme.Project_LBM">
+        <activity android:name=".activity_openletter"></activity>
+        <activity android:name=".WriteActivity" />
+        <activity android:name=".activity_home" />
+        <activity android:name=".SubActivity2"/>
+
+        <activity
+            android:name=".Splash"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Splash"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:screenOrientation="portrait">
 
-        </activity>
-
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
