버튼 에러 수정 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_LBM">
-        <activity android:name=".activity_openletter"></activity>
+        <activity android:name=".activity_openletter" />
         <activity android:name=".WriteActivity" />
-        <activity android:name=".HomeActivity"/>
-
+        <activity android:name=".HomeActivity" />
         <activity
             android:name=".Splash"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
